<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Roadrunner</string>
    <string name="app_dialog_yes">Yes</string>
    <string name="app_dialog_no">No</string><string name="app_dialog_login">Login</string><string name="app_dialog_cancel">Cancel</string><string name="app_progress_pleasewait">Please Wait...</string>
    <string name="app_progress_retdata">Retrieving Data...</string><string name="app_progress_systemState">Checking System...</string><string name="app_progress_fixingProblem">Fixing Problem...</string><string name="roadrunner_scan">Scan Item</string>
    <string name="roadrunner_deliveries">Deliveries</string><string name="roadrunner_menu_settings">Settings</string>
    <string name="roadrunner_menu_info">Info</string>
    <string name="roadrunner_menu_systemtest">System Test</string>
    <string name="roadrunner_dialog_missingScanner">In order to use the Roadrunner App you need to install a
     	QR-barcode scanner.\n\nWould you like to download a barcode scanner now?
    </string>
    <string name="roadrunner_dialog_missingCouchDB">In order to use the Roadrunner App you need to install 
    	CouchDB.\n\nWould you like to download CouchDB now?
    </string><string name="roadrunner_dialog_firstStartCouchDB">You have to start the installed CouchDB App for the first time to finish the installation process.</string>
    <string name="roadrunner_dialog_startCouchDB">In order to use Roadrunner you have to start your CouchDB.</string>
    <string name="roadrunner_dialog_closedCouchDB">Please start CouchDB to use Roadrunner!</string><string name="roadrunner_dialog_restartCouchDB">A new user has been created - please restart CouchDB! </string><string name="roadrunner_dialog_checkConnection">Please check your Server IP/Port in your settings and make sure you have established a connection (WiFi).</string><string name="info_title">Roadrunner &gt; Information</string><string name="info_text">
    	Eine wunderbare Heiterkeit hat meine ganze Seele eingenommen, gleich den sueßen Fruehlingsmorgen, 
    	die ich mit ganzem Herzen geniesse. Ich bin allein und freue mich meines Lebens in dieser Gegend, 
    	die fuer solche Seelen geschaffen ist wie die meine. Ich bin so gluecklich, mein Bester, so ganz 
    	in dem Gefuehle von ruhigem Dasein versunken, daß meine Kunst darunter leidet. Ich koennte jetzt nicht zeichnen, 
    	nicht einen Strich, und bin nie ein groeßerer Maler gewesen als in diesen Augenblicken.
    	Wenn das liebe Tal um mich dampft, und die hohe Sonne an der Oberflaeche der undurchdringlichen Finsternis 
    	meines Waldes ruht, und nur einzelne Strahlen sich in das innere Heiligtum stehlen, ich dann im hohen Grase 
    	am fallenden Bache liege, und näher an der Erde tausend mannigfaltige Graeschen mir merkwürdig werden,
    	wenn ich das Wimmeln der kleinen Welt zwischen Halmen, die unzähligen, unergruendlichen Gestalten der Wuermchen, 
    	der Mueckchen naeher an meinem Herzen fuehle, und fuehle die Gegenwart des Allmaechtigen, der uns 
    	nach seinem Bilde schuf, das Wehen des Alliebenden, der uns in ewiger Wonne schwebend traegt und erhaelt -
    	mein Freund! Wenns dann um meine Augen daemmert, und die Welt um mich her und der Himmel ganz in meiner 
    	Seele ruhn wie die Gestalt einer Geliebten - dann sehne ich mich oft und denke - ach koenntest du das wieder 
    	ausdruecken, koenntest du dem Papiere das einhauchen, was so voll, so warm in dir lebt, daß es wuerde der 
    	Spiegel deiner Seele, wie deine Seele ist der Spiegel des unendlichen Gottes! - mein Freund - aber ich gehe darueber
    	zugrunde, ich erliege unter der Gewalt der Herrlichkeit dieser Erscheinungen. Eine wunderbare Heiterkeit 
    	hat meine ganze Seele eingenommen, gleich den sueßen Frühlingsmorgen, die ich mit ganzem Herzen geniesse.
	</string>
    <string name="pref_title">Roadrunner &gt; Settings</string><string name="pref_server">Connection Settings</string>
    <string name="pref_server_ip">Server IP</string>
    <string name="pref_server_database">Databasename</string>
    
    <string name="pref_authentication">User Settings</string><string name="pref_authentication_user">User Name</string><string name="pref_authentication_password">User Password</string><string name="pref_transportation">Transportation Settings</string><string name="pref_transportation_name">Transportation</string><string name="pref_transportation_summary">Select your actual transportation which you are using to deliver the goods</string><string-array name="pref_transportation_array">
        <item>LKW 1</item>
        <item>LKW 2</item>
        <item>LKW 3</item>
        <item>Van 1</item>
        <item>Van 2</item>
        <item>PKW 1</item>
    </string-array><string-array name="pref_transportation_values">
        <item>lkw1</item>
        <item>lkw2</item>
        <item>lkw3</item>
        <item>van1</item>
        <item>van2</item>
        <item>pkw1</item>
    </string-array>
    <string name="pref_transportationid_summary">ID of the Transportation Document</string>
    <string name="pref_transportation_id">Transportation ID</string><string name="pref_loginsound_summary">Play famous Roadrunner Sound on Login</string><string name="pref_loginsound_name">Login Sound</string><string name="pref_other">Other Settings</string>
    <string name="systemtest_title">Roadrunner &gt; System Test</string><string name="systemtest_ok">OK</string>
    <string name="systemtest_fail">FAIL</string>
    <string name="systemtest_local_couch_db_installed">CouchDB is installed on this device</string><string name="systemtest_local_ini_file_exists">CouchDB configuration file is available</string><string name="systemtest_local_couch_db_running">CouchDB is running on this device</string>
    <string name="systemtest_local_couch_db_reachable">CouchDB (local) is reachable</string><string name="systemtest_local_admin_exists">Admin User exists</string><string name="systemtest_local_db_exists">Local Database exists</string><string name="systemtest_local_initial_replication">Local Database is initial replicated</string><string name="systemtest_remote_couch_db_reachable">CouchDB (remote) is reachable</string><string name="systemtest_menu_refresh">Refresh</string><string name="systemtest_menu_fixitup">Fix Problems</string>
    <string name="deliveries_title">Roadrunner &gt; Deliveries</string><string name="deliveries_noDeliveries">no deliveries available...</string>
    <string name="items_txt_status"></string><string name="items_txt_key">Key</string>
    <string name="items_txt_date">Scanned</string><string name="items_status_synchronize">Synchronize with Server...</string>
    <string name="items_status_loading_local_items">Loading loaded Items...</string><string name="items_status_local_items_loaded">Currently Loaded Items</string><string name="items_status_last_synchronized">Last Synchronization with Server</string>
    
    <string name="items_status_remote_db_not_reachable">Remote Database is not reachable</string>
    <string name="items_status_local_db_not_reachable">Local Database is not reachable</string>
    <string name="items_context_details_item">Show Details</string><string name="items_context_delete_item">Delete Item</string>
    <string name="local_service_started">Monitoring Started</string>
    <string name="local_service_stopped">Monitoring Stopped</string><string name="local_service_label">Roadrunner Monitoring Service</string><string name="monitoring_title">Roadrunner &gt; Monitoring</string><string name="monitoring_txt_status">Roadrunner is now tracking GPS/Temperature!</string>
    <string name="monitoring_controller_start">Start Service</string>
    <string name="monitoring_controller_stop">Stop Service</string>
    <item type="id" name="service_notification_id" />
    <string name="service_label">Roadrunner Services</string>
    <string name="service_infotext">Click for Service-Details</string>
    <string name="monitoring_controller_title">Roadrunner &gt; Monitor  Service Controller </string>
    <string name="login_txt_status">Please enter your Login-Data</string>
    <string name="login_txt_username">Username:</string>
    <string name="login_txt_password">Password:</string>
    <string name="login_txt_container">Select Your Transportation:</string><string name="login_btn_login">Login</string>
    <string name="login_menu_refresh">Refresh Transportation</string><string name="login_menu_exit">Exit</string><string name="service_controller_title">Roadrunner &gt; Service Controller </string>
    <string name="start_all_services">Start all Services</string>
    <string name="stop_all_services">Stop all Services</string>
    <string name="service_running">Service Running</string>
    <string name="service_not_running">Service Not Running</string>
    <string name="stop_roadrunner">Stop Roadrunner</string>
    <string name="logging">Logging</string>
    <string name="monitoring">Monitoring</string>
    <string name="replicating">Replicating</string>
    <string name="items_noItems">there are currently no items...</string>
    <string name="items_title">Roadrunner &gt; Deliveries &gt; Items</string>
    <string name="roadrunner_signature">Signature</string>
    <string name="map_title">Roadrunner &gt; Deliveries &gt; Route</string>
    <string name="signature_done">Signature Done</string>
    <string name="signature_cancel">Cancel Signature</string>
    <string name="signature_title">Roadrunner &gt; Signature</string>
    
    
    
</resources>
