<?xml version="1.0" encoding="utf-8"?> 
<PreferenceScreen xmlns:android= "http://schemas.android.com/apk/res/android"> 
	<PreferenceCategory android:title="@string/pref_server"> 
		<EditTextPreference 
			android:key="ip" 
			android:title="@string/pref_server_ip" 
			android:defaultValue="172.16.102.224:5984"
			android:enabled="false"
		/> 
		<EditTextPreference
			android:key="database"
			android:title="@string/pref_server_database"
			android:defaultValue="roadrunner"
			android:enabled="false"
		/>
	</PreferenceCategory>
	
	<PreferenceCategory android:title="@string/pref_authentication"> 
		<EditTextPreference
			android:key="user"
			android:title="@string/pref_authentication_user"
			android:defaultValue="roadrunner"
		/>
		<EditTextPreference
			android:key="password"
			android:title="@string/pref_authentication_password"
			android:password="true"
			android:defaultValue="roadrunner"
		/>
	</PreferenceCategory>
	
	<PreferenceCategory android:title="@string/pref_transportation"> 
		<EditTextPreference
			android:key="transportation"
			android:summary="@string/pref_transportation_summary"
			android:title="@string/pref_transportation_name"
		/>
	</PreferenceCategory>
</PreferenceScreen>
